--- a/app/src/index.html
+++ b/app/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electron App</title>
 </head>
-<body>
+<body id="target">
     <p>Hello from Electron!</p>
 </body>
 </html>
